--- a/i3/general_settings.conf
+++ b/i3/general_settings.conf
@@ -4,8 +4,12 @@
 new_window pixel 3
 new_float pixel 3
 
+
 # Floating modifier
 floating_modifier $mod
 
 # Enable drag-and-drop for tiling windows
 tiling_drag modifier titlebar
+
+# focus dont change when mouse enter a new window
+focus_follows_mouse no
