--- a/i3/autostart.conf
+++ b/i3/autostart.conf
@@ -4,7 +4,7 @@
 exec_always --no-startup-id xinput set-prop "CUST0001:00 06CB:CDAA Touchpad" "libinput Tapping Enabled" 1
 
 # Keyboard settings
-exec --no-startup-id sh -c 'while true; do setxkbmap -option caps:escape; sleep 600; done'
+exec --no-startup-id exec setxkbmap -option caps:escape
 
 # XDG autostart
 exec --no-startup-id dex --autostart --environment i3
