--- a/i3/general_settings.conf
+++ b/i3/general_settings.conf
@@ -1,8 +1,11 @@
 # General settings for i3
 
 # Window border settings
-new_window pixel 3
-new_float pixel 3
+new_window pixel 2
+new_float pixel 5
+
+# border color
+client.focused          #1c3819 #a03223 #ffffff #111111 #a0a0a0
 
 
 # Floating modifier
