--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -2,6 +2,7 @@
 
 # Start a terminal
 bindsym $mod+Return exec --no-startup-id alacritty
+bindsym $mod+shift+Return exec --no-startup-id ~/bin/warp
 
 #bindsym $mod+Return exec kitty
 
@@ -66,7 +67,7 @@ bindsym $mod+space focus mode_toggle
 # i3: Reload, restart, exit
 bindsym $mod+Mod1+c reload
 bindsym $mod+Mod1+r restart
-bindsym $mod+Mod1+e exit
+bindsym $mod+Mod1+k exit
 
 # System: lock, restart, shutdown, sleep
 bindsym $mod+Mod1+l exec i3lock-fancy
